movement_child view

--- a/app/views/movements/movement_child.html.erb
+++ b/app/views/movements/movement_child.html.erb
@@ -149,7 +149,7 @@
 
     <div class="col-md-6">
       <% @sub_temp = 0 %>
-        <% @movi_child = @movi_co.where('movement_parent == ? and iva == ?', params[:id], false)%>
+        <#% @movi_child = @movi_co.where('movement_parent == ? and iva == ?', params[:id], false)%>
         <% unless @movi_child.blank? %>
         <table>
             <thead>
